--- a/portfolio/sandwitch generator/style.css
+++ b/portfolio/sandwitch generator/style.css
@@ -25,21 +25,7 @@ h1 {
   display: flex;
   flex-direction: row;
 }
-.block-list {
-  width: 200px;
-  height: auto;
-  list-style-type: none;
-  background-color: rgb(255, 255, 255);
-  font-size: 24px;
-  border: 2px solid rgb(77, 76, 76);
-  border-radius: 5px;
-  box-shadow: 0 0 7px rgb(124, 124, 124);
-}
-li {
-  display: flex;
-  padding: 10px;
-  margin-left: 10px;
-}
+/*here should be class from js ==> templete // is not defined yet*/
 input {
   display: flex;
   margin-left: 10px;
