--- a/portfolio/Searcher 2/style.css
+++ b/portfolio/Searcher 2/style.css
@@ -44,6 +44,10 @@ header button {
   font-size: 24px;
 }
 .filters {
+  display: none;
+}
+
+.filters.active {
   display: flex;
   justify-content: space-between;
   margin-bottom: 30px;
